--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
@@ -51,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
+    "@types/lodash": "^4.17.17",
     "concurrently": "^9.1.2"
   }
 }
