--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.11",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
@@ -23,7 +25,10 @@
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
+    "rxdb": "^16.15.0",
+    "rxdb-hooks": "^5.0.2",
     "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
