--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     },
     {
-      "src": "icon.png",
+      "src": "logo-smp.png",
       "type": "image/png",
       "sizes": "512x512"
     }
