Update team names and add initialization logging
- Changed Patrick Guntharp to Sookie Wentzel
- Changed Tony Guntharp to Ryan Wentzel
- Changed Tuxedo to Dragon (mascot)
- Added console logging to track app initialization
- Helps debug page load issues on deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,18 @@
 {
     "cSpell.words": [
+        "Antetokounmpo",
+        "charizard",
+        "connor",
         "Dexie",
+        "doncic",
+        "Dončić",
         "geolocation",
+        "giannis",
         "Griffey",
+        "Holo",
+        "luka",
+        "mahomes",
+        "mcdavid",
         "nosniff",
         "Panini",
         "rgba",
