Update all remaining @sportscardtracker.com emails to Sookie@Zylt.AI
Updated documentation files:
- docs/guides/installation.md
- docs/README.md
- docs/guides/faq.md (3 instances)
- CONTRIBUTING.md
- docs/guides/troubleshooting.md (2 instances)
- docs/features/dashboard.md
- docs/guides/quick-start.md
- docs/features/ebay-integration.md
- docs/features/reports.md

All support, dev, and beta email addresses now consistently use Sookie@Zylt.AI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "Acuna",
         "Antetokounmpo",
+        "Bestest",
         "charizard",
+        "COMC",
         "connor",
+        "Contentful",
         "Dexie",
         "doncic",
         "Dončić",
@@ -13,9 +17,24 @@
         "luka",
         "mahomes",
         "mcdavid",
+        "messi",
+        "minmax",
         "nosniff",
+        "ohtani",
         "Panini",
+        "pikachu",
+        "Prizm",
+        "PWCC",
         "rgba",
-        "Topps"
+        "securepassword",
+        "shohei",
+        "Sookie",
+        "Swipeable",
+        "TCDB",
+        "testpass",
+        "Topps",
+        "WCAG",
+        "Wentzel",
+        "XVCJ"
     ]
 }
