--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.90.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -96,11 +97,15 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.0.0",
+    "@commitlint/config-conventional": "^18.0.0",
+    "@craco/craco": "^7.1.0",
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.17",
     "@types/tesseract.js": "^0.0.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "babel-plugin-transform-imports": "^2.0.0",
     "concurrently": "^9.1.2",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
@@ -109,16 +114,12 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "@commitlint/cli": "^18.0.0",
-    "@commitlint/config-conventional": "^18.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
-    "webpack-bundle-analyzer": "^4.10.1",
     "source-map-explorer": "^2.2.1",
-    "@craco/craco": "^7.1.0",
-    "babel-plugin-transform-imports": "^2.0.0",
-    "terser-webpack-plugin": "^5.3.9"
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack-bundle-analyzer": "^4.10.1"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
