--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,24 @@
     "cSpell.words": [
         "Acuna",
         "Antetokounmpo",
+        "autotable",
         "Bestest",
         "charizard",
         "COMC",
         "connor",
         "Contentful",
+        "craco",
         "Dexie",
+        "dicstmwvrpyyszqxubhu",
         "doncic",
         "Dončić",
+        "drei",
         "geolocation",
         "giannis",
         "Griffey",
         "Holo",
+        "ilike",
+        "jspdf",
         "luka",
         "mahomes",
         "mcdavid",
@@ -21,16 +27,22 @@
         "minmax",
         "nosniff",
         "ohtani",
+        "ossp",
         "Panini",
+        "PGRST",
         "pikachu",
+        "plpgsql",
         "Prizm",
         "PWCC",
         "rgba",
+        "rxdb",
         "securepassword",
         "shohei",
         "Sookie",
+        "supabase",
         "Swipeable",
         "TCDB",
+        "tesseract",
         "testpass",
         "Topps",
         "WCAG",
