--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
     "analyze:source-map": "npm run build && npx source-map-explorer 'build/static/js/*.js'",
     "analyze:size": "npm run build && du -sh build/static/js/*.js | sort -hr",
+    "migrate:supabase": "node scripts/migrate-to-supabase.js",
     "prepare": "husky install",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:unit": "jest --testPathPattern=tests/unit",
@@ -107,6 +108,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "concurrently": "^9.1.2",
+    "dotenv": "^17.2.3",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.29.1",
