--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
+    "open": "^10.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.65.0",
