--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "TCDB",
         "tesseract",
         "testpass",
+        "testuser",
         "Topps",
         "WCAG",
         "webfonts",
