--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
-    "dexie": "^4.0.11",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -105,8 +104,8 @@
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.17",
     "@types/tesseract.js": "^0.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "concurrently": "^9.1.2",
     "dotenv": "^17.2.3",
@@ -116,13 +115,19 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
     "source-map-explorer": "^2.2.1",
     "terser-webpack-plugin": "^5.3.9",
     "webpack-bundle-analyzer": "^4.10.1"
+  },
+  "overrides": {
+    "eslint-config-react-app": {
+      "@typescript-eslint/eslint-plugin": "^7.18.0",
+      "@typescript-eslint/parser": "^7.18.0"
+    }
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
